Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1158

Avro-C: Infinite Loop in Deflate Codec Decompression

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.1
    • 1.7.2
    • c

    Description

      If an avro datafile contains corrupted or incomplete deflate data in a block, the deflate codec can go into an infinite loop as we do not check if inflation only partially occurred.

      Attachments

        1. codec_deflate_fixes.patch
          2 kB
          Lucas Martin-King

        Activity

          People

            Unassigned Unassigned
            lmartinking Lucas Martin-King
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: