AVRO-1158. C: Fix infinite loop in delate codec decompression.

Contributed by Lucas Martin-King.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1384540 13f79535-47bb-0310-9956-ffa450edef68